Edited layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@
 	a
 	{
 		text-decoration: none;
-		color: #80BA8E;
+		color: #3a0058;
 	}
 
 	a:hover
